infra/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-website-test
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-website-test
  template:
    metadata:
      labels:
        app: static-website-test
    spec:
      containers:
        - name: static-website-test
          image: nginx:alpine
          ports:
          - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              subPath: example-static-website
              name: static-website-volume
      volumes:
        - name: static-website-volume
          gitRepo:
            repository: https://github.com/atxpaul/example-website.git
