infra/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: test
spec:
  type: NodePort
  selector:
    app: test
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30666
